# FloydWarshall-kernel

./: .~lock.datacpu.csv#  CMakeLists.txt  compile.sh  data.csv  kernel.cu  main.cpp  main.cu
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui.sdk.scheduler/: dialog_settings.xml
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.hamza-n56jk_19/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.hamza-n56jk_19/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.hamza-n56jk_19/H.local_16/: node.properties
Matrix/: b1_ss.mtx  ottoxotto.mtx
excel/: CMakeLists.txt  dataErrorWhere.csv
include/: FloydWarshall.hpp  kernel.h
result_background/: nohup.out
src/: FloydWarshall.cpp
